# modot

./: README.md  modot.repos  setup.sh  setup_edgetpu.sh
modot_bringup/: CMakeLists.txt  package.xml
modot_bringup/config/: 60-modot.rules  image_rotate.yaml  realsense.yaml  realsense_tf_publisher.yaml  yolo_detector.yaml
modot_bringup/launch/: bringup.launch.py
modot_bringup/rviz/: default.rviz
modot_bringup/yolo_model/: vidvipo_yolov8n_2023-05-19_full_integer_quant_edgetpu.tflite
modot_description/: CMakeLists.txt  package.xml
modot_description/include/modot_description/: camera_tf_publisher.hpp
modot_description/launch/: description_bringup.launch.py  transform_publisher.launch.py
modot_description/src/: camera_tf_publisher.cpp  camera_tf_publisher_node.cpp
modot_lib/: CMakeLists.txt  package.xml
modot_lib/include/modot_lib/: parameter_updater.hpp
modot_lib/modot_lib/: stoppable_thread.py
modot_notification/: .gitignore  generate_face_sound.py  generate_sound.py  package.xml  requirements.txt  setup.cfg  setup.py
modot_notification/modot_notification/: sound_notifier.py
modot_recognition/: .gitignore  CMakeLists.txt  package.xml
modot_recognition/config/: DEFAULT_FASTRTPS_PROFILES.xml
modot_recognition/config/darknet_ros/: ros.yaml  vidvipo-yolov2-tiny.yaml
modot_recognition/config/realsense2_camera/: realsense.yaml
modot_recognition/include/modot_recognition/: face_detection_visualizer.hpp  obstacle_detector.hpp
modot_recognition/launch/: recognition_bringup.launch.py  vidvipo_yolov2_tiny.launch.py
modot_recognition/rviz/: recognition.rviz
modot_recognition/src/: face_detection_visualizer.cpp  obstacle_detector.cpp  obstacle_detector_node.cpp
