<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>modot_recognition</name>
  <version>0.1.0</version>
  <description>Package for MODOT recognition</description>
  <maintainer email="mitukou1109@gmail.com">Mitsuhiro Sakamoto</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>cv_bridge</depend>
  <depend>modot_lib</depend>
  <depend>rclcpp</depend>
  <depend>tf2_ros</depend>

  <exec_depend>modot_description</exec_depend>
  <exec_depend>realsense2_camera</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>ultralytics_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>